--- a/stateflow/stateflow.vcxproj
+++ b/stateflow/stateflow.vcxproj
@@ -111,6 +111,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="States.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="States.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
